src/main/java/de/haupz/basicode/parser/BasicParser.java
/* BasicParser.java */
/* Generated By:JavaCC: Do not edit this line. BasicParser.java */
package de.haupz.basicode.parser;

import java.util.ArrayList;
import java.util.List;

import de.haupz.basicode.ast.*;

public class BasicParser implements BasicParserConstants {
    List<Object> dataList = new ArrayList<>();

// Parser.

//
// basic structures
//
  final public 
ProgramNode program() throws ParseException {List<LineNode> lines = new ArrayList<>();
    LineNode l;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      l = line();
lines.add(l);
    }
{if ("" != null) return new ProgramNode(lines, dataList);}
    throw new Error("Missing return statement in function");
}

  final public LineNode line() throws ParseException {List<StatementNode> statements = new ArrayList<>();
    int num;
    StatementNode st;
    num = lineNumber();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DATA:{
      st = data_line();
statements.add(st);
      break;
      }
    case DEF:
    case DIM:
    case END:
    case FOR:
    case GOSUB:
    case GOTO:
    case IF:
    case INPUT:
    case LET:
    case NEXT:
    case ON:
    case PRINT:
    case READ:
    case REM:
    case RESTORE:
    case RETURN:
    case RUN:
    case STOP:
    case IDENTIFIER:{
      st = statement();
statements.add(st);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 53:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        jj_consume_token(53);
        st = statement();
statements.add(st);
      }
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EOL:{
      jj_consume_token(EOL);
      break;
      }
    case 0:{
      jj_consume_token(0);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new LineNode(num, statements);}
    throw new Error("Missing return statement in function");
}

  final public int lineNumber() throws ParseException {Token n;
    n = jj_consume_token(NUMBER);
{if ("" != null) return Integer.parseInt(n.image);}
    throw new Error("Missing return statement in function");
}

//
// statements
//
  final public 
StatementNode statement() throws ParseException {Token t;
    ExpressionNode e;
    StatementNode s;
    int n;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REM:{
      t = jj_consume_token(REM);
{if ("" != null) return new RemNode(t.image);}
      break;
      }
    case LET:
    case IDENTIFIER:{
      s = assignment();
{if ("" != null) return s;}
      break;
      }
    case PRINT:{
      s = print_statement();
{if ("" != null) return s;}
      break;
      }
    case GOTO:{
      jj_consume_token(GOTO);
      n = lineNumber();
{if ("" != null) return new GotoNode(n);}
      break;
      }
    case GOSUB:{
      jj_consume_token(GOSUB);
      n = lineNumber();
{if ("" != null) return new GosubNode(n);}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
{if ("" != null) return new ReturnNode();}
      break;
      }
    case ON:{
      s = dependent_jump();
{if ("" != null) return s;}
      break;
      }
    case DIM:{
      s = dim_statement();
{if ("" != null) return s;}
      break;
      }
    case FOR:{
      s = for_statement();
{if ("" != null) return s;}
      break;
      }
    case NEXT:{
      jj_consume_token(NEXT);
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new NextNode(t.image);}
      break;
      }
    case IF:{
      s = if_statement();
{if ("" != null) return s;}
      break;
      }
    case READ:{
      s = read_statement();
{if ("" != null) return s;}
      break;
      }
    case RESTORE:{
      jj_consume_token(RESTORE);
{if ("" != null) return new RestoreNode();}
      break;
      }
    case END:
    case STOP:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case END:{
        jj_consume_token(END);
        break;
        }
      case STOP:{
        jj_consume_token(STOP);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return new EndNode();}
      break;
      }
    case INPUT:{
      jj_consume_token(INPUT);
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new InputNode(t.image);}
      break;
      }
    case RUN:{
      jj_consume_token(RUN);
{if ("" != null) return new RunNode();}
      break;
      }
    case DEF:{
      s = def_fn();
{if ("" != null) return s;}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public StatementNode data_line() throws ParseException {Object l;
    List<Object> items = new ArrayList<>();
    jj_consume_token(DATA);
    l = data_literal();
items.add(l);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(54);
      l = data_literal();
items.add(l);
    }
dataList.addAll(items);
        {if ("" != null) return new DataNode(items);}
    throw new Error("Missing return statement in function");
}

  final public Object data_literal() throws ParseException {int sgn = 1;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:
    case FLOAT:
    case 55:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 55:{
        jj_consume_token(55);
sgn = -1;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:{
        t = jj_consume_token(NUMBER);
{if ("" != null) return sgn * Integer.parseInt(t.image);}
        break;
        }
      case FLOAT:{
        t = jj_consume_token(FLOAT);
{if ("" != null) return sgn * Double.parseDouble(t.image);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
{if ("" != null) return t.image.substring(1, t.image.length() - 1);}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public StatementNode assignment() throws ParseException {Token t;
    boolean isArrayAssignment = false;
    ExpressionNode e = null;
    ExpressionNode f = null;
    ExpressionNode g = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LET:{
      jj_consume_token(LET);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    t = jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 56:{
      jj_consume_token(56);
      e = expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        jj_consume_token(54);
        f = expression();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(57);
isArrayAssignment = true;
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(58);
    g = expression();
{if ("" != null) return isArrayAssignment ? new LetArrayNode(t.image, e, f, g) : new LetNode(t.image, g);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode print_statement() throws ParseException {Token t;
    PrintNode.Element elem;
    List<PrintNode.Element> elements = new ArrayList<>();
    jj_consume_token(PRINT);
    elem = print_element();
elements.add(elem);
    label_4:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        t = jj_consume_token(54);
        break;
        }
      case 59:{
        t = jj_consume_token(59);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
elements.add(new PrintNode.Element(PrintNode.ElementType.SEPARATOR, t.image));
      elem = print_element();
elements.add(elem);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 59:{
      t = jj_consume_token(59);
elements.add(new PrintNode.Element(PrintNode.ElementType.SEPARATOR, t.image));
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
{if ("" != null) return new PrintNode(elements);}
    throw new Error("Missing return statement in function");
}

  final public PrintNode.Element print_element() throws ParseException {ExpressionNode e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:
    case INTEGER:
    case FLOAT:
    case STRING:
    case ABS:
    case ASC:
    case ATN:
    case CHRS:
    case COS:
    case FN:
    case INT:
    case LEFTS:
    case MIDS:
    case NOT:
    case RIGHTS:
    case SGN:
    case SIN:
    case SQR:
    case TAN:
    case VAL:
    case IDENTIFIER:
    case FNIDENTIFIER:
    case 55:
    case 56:{
      e = expression();
{if ("" != null) return new PrintNode.Element(PrintNode.ElementType.EXPRESSION, e);}
      break;
      }
    case TAB:{
      jj_consume_token(TAB);
      jj_consume_token(56);
      e = expression();
      jj_consume_token(57);
{if ("" != null) return new PrintNode.Element(PrintNode.ElementType.TAB, e);}
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public StatementNode dim_statement() throws ParseException {DimCreateNode d;
    List<DimCreateNode> dims = new ArrayList<>();
    jj_consume_token(DIM);
    d = one_dim();
dims.add(d);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(54);
      d = one_dim();
dims.add(d);
    }
{if ("" != null) return new DimNode(dims);}
    throw new Error("Missing return statement in function");
}

  final public DimCreateNode one_dim() throws ParseException {Token t;
    ExpressionNode d1 = null;
    ExpressionNode d2 = null;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(56);
    d1 = expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 54:{
      jj_consume_token(54);
      d2 = expression();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(57);
{if ("" != null) return new DimCreateNode(t.image, d1, d2);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode dependent_jump() throws ParseException {ExpressionNode e;
    boolean isGosub = false;
    List<Integer> targets = new ArrayList<>();
    int n;
    jj_consume_token(ON);
    e = expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GOTO:{
      jj_consume_token(GOTO);
      break;
      }
    case GOSUB:{
      jj_consume_token(GOSUB);
isGosub = true;
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    n = lineNumber();
targets.add(n);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
      jj_consume_token(54);
      n = lineNumber();
targets.add(n);
    }
{if ("" != null) return isGosub ? new OnGosubNode(e, targets) : new OnGotoNode(e, targets);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode for_statement() throws ParseException {Token t;
    ExpressionNode e;
    ExpressionNode f;
    ExpressionNode g = null;
    jj_consume_token(FOR);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(58);
    e = expression();
    jj_consume_token(TO);
    f = expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STEP:{
      jj_consume_token(STEP);
      g = expression();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
{if ("" != null) return new ForNode(t.image, e, f, g);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode if_statement() throws ParseException {ExpressionNode e;
    int l = -1;
    StatementNode s;
    List<StatementNode> thenStatements = new ArrayList<>();
    jj_consume_token(IF);
    e = expression();
    jj_consume_token(THEN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      l = lineNumber();
thenStatements.add(new GotoNode(l));
      break;
      }
    case DEF:
    case DIM:
    case END:
    case FOR:
    case GOSUB:
    case GOTO:
    case IF:
    case INPUT:
    case LET:
    case NEXT:
    case ON:
    case PRINT:
    case READ:
    case REM:
    case RESTORE:
    case RETURN:
    case RUN:
    case STOP:
    case IDENTIFIER:{
      s = statement();
thenStatements.add(s);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 53:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_7;
        }
        jj_consume_token(53);
        s = statement();
thenStatements.add(s);
      }
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new IfThenNode(e, thenStatements);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode read_statement() throws ParseException {Token t;
    List<String> ids = new ArrayList<>();
    jj_consume_token(READ);
    t = jj_consume_token(IDENTIFIER);
ids.add(t.image);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 54:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_8;
      }
      jj_consume_token(54);
      t = jj_consume_token(IDENTIFIER);
ids.add(t.image);
    }
{if ("" != null) return new ReadNode(ids);}
    throw new Error("Missing return statement in function");
}

  final public StatementNode def_fn() throws ParseException {String f;
    Token u;
    ExpressionNode e;
    jj_consume_token(DEF);
    f = fn_id();
    jj_consume_token(56);
    u = jj_consume_token(IDENTIFIER);
    jj_consume_token(57);
    jj_consume_token(58);
    e = expression();
{if ("" != null) return new DefFnNode(f, u.image, e);}
    throw new Error("Missing return statement in function");
}

  final public String fn_id() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FN:{
      jj_consume_token(FN);
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return t.image;}
      break;
      }
    case FNIDENTIFIER:{
      t = jj_consume_token(FNIDENTIFIER);
{if ("" != null) return t.image.substring(2, t.image.length());}
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

//
// expressions
//
  final public 
ExpressionNode expression() throws ParseException {ExpressionNode e;
    ExpressionNode f;
    e = and_expression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_9;
      }
      jj_consume_token(OR);
      f = and_expression();
e = new OrNode(e, f);
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionNode and_expression() throws ParseException {ExpressionNode e;
    ExpressionNode f;
    e = equality_expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        break label_10;
      }
      jj_consume_token(AND);
      f = equality_expression();
e = new AndNode(e, f);
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionNode equality_expression() throws ParseException {ExpressionNode e;
    ExpressionNode f;
    e = relational_expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 58:
    case 60:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 58:{
        jj_consume_token(58);
        f = relational_expression();
{if ("" != null) return new EqNode(e, f);}
        break;
        }
      case 60:{
        jj_consume_token(60);
        f = relational_expression();
{if ("" != null) return new NeqNode(e, f);}
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      ;
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionNode relational_expression() throws ParseException {ExpressionNode e;
    ExpressionNode f;
    e = additive_expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 61:
    case 62:
    case 63:
    case 64:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        jj_consume_token(61);
        f = additive_expression();
{if ("" != null) return new LtNode(e, f);}
        break;
        }
      case 62:{
        jj_consume_token(62);
        f = additive_expression();
{if ("" != null) return new LeqNode(e, f);}
        break;
        }
      case 63:{
        jj_consume_token(63);
        f = additive_expression();
{if ("" != null) return new GtNode(e, f);}
        break;
        }
      case 64:{
        jj_consume_token(64);
        f = additive_expression();
{if ("" != null) return new GeqNode(e, f);}
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      ;
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionNode additive_expression() throws ParseException {ExpressionNode e;
    ExpressionNode f;
    e = multiplicative_expression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 55:
      case 65:{
        ;
        break;
        }
      default:
        jj_la1[31] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 65:{
        jj_consume_token(65);
        f = multiplicative_expression();
e = new AddNode(e, f);
        break;
        }
      case 55:{
        jj_consume_token(55);
        f = multiplicative_expression();
e = new SubtractNode(e, f);
        break;
        }
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}
